--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -3,6 +3,7 @@
   become: true
   tasks:
   - name: Install Docker
+    become: yes
     apt: name=docker.io state=present
     
   - name: Start Docker Service
