--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,22 +1,17 @@
----
-- hosts: Dev
+--
+- hosts: all
   become: true
   tasks:
   - name: Install Docker
-    become: yes
-    apt: name=docker-ce state=present
-    
+    apt: name=docker.io state=present
   - name: Start Docker Service
     command: sudo systemctl start docker
     become: yes
     become_user: root
-    
   - name: docker run user
     shell: usermod -a -G docker ubuntu
-    
   - name: check the docker version
     command: "docker version"
     register: docversion
-    
   - name: Deploy you application and run as container
     command: docker run -itd -p 8084:8081 basavarajshettar/insure-app:1.0
