--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,17 +1,22 @@
---
+---
 - hosts: Dev
   become: true
   tasks:
   - name: Install Docker
-    apt: name=docker.io state=present
+    become: yes
+    apt: name=docker-ce state=latest
+    
   - name: Start Docker Service
     command: sudo systemctl start docker
     become: yes
     become_user: root
+    
   - name: docker run user
     shell: usermod -a -G docker ubuntu
+    
   - name: check the docker version
     command: "docker version"
     register: docversion
+    
   - name: Deploy you application and run as container
     command: docker run -itd -p 8084:8081 basavarajshettar/insure-app:1.0
