--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -3,10 +3,8 @@
   become: true
   tasks:
   - name: Install Docker
-     apt:
-        name: docker-io
-        state: present
-        become: yes
+     apt: name=docker.io state=present
+        
     
   - name: Start Docker Service
     command: sudo systemctl start docker
@@ -20,5 +18,5 @@
     command: "docker version"
     register: docversion
     
-  - name: Deploy you application and run as container
+  - name: Deploying application and run as container
     command: docker run -itd -p 8084:8081 basavarajshettar/insure-app:1.0
